15622
The following session demonstrates the problem:
```scala
scala> type Hui = Nil.type
defined type alias Hui

scala> val n: Hui = Nil     
<console>:6: error: type mismatch;
 found   : n.type (with underlying type Hui)
 required: Hui
       val n: Hui = Nil
           ^
```

However if I don't use type alias, it works no problem:
```scala
scala> val n:Nil.type = Nil
n: scala.collection.immutable.Nil.type = List()
```
